# unstructured-inference

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  Darwin_output.txt  Dockerfile  Linux_output.txt  MANIFEST.in  Makefile  README.md  analyze_layout.py  analyze_layout_images.py  analyze_layout_pdfs.py  images_doc_speed_paddle.txt  images_doc_speed_tesseract.txt  logger_config.yaml  prediction_output_arm64.txt  prediction_output_x86_64.txt  pyproject.toml  pytest.ini  renovate.json5  sample_table_transcript_output.txt  sample_table_transcript_output_arm64.txt  setup.cfg  setup.py  test.py
.github/: dependabot.yml
.github/workflows/: ci.yml  release.yml
benchmarks/: test_benchmark_yolox.py
docker/: Dockerfile
examples/image-extraction/: embedded-image-extraction.py
examples/image_extraction/: README.md  requirements.txt
examples/layout_analysis/: README.md  visualization.ipynb  visualization.py
examples/ocr/: engine.py  requirements.txt  validate_ocr_performance.ipynb  validate_ocr_performance.py
examples/ocr_layout_supplement/: README.md  ocr_layout_supplement.ipynb  ocr_layout_supplement.py
layout_results_arm64/: 2023-Jan-economic-outlook_layout.json  IRS-form-1987_layout.json  Silent-Giant_layout.json  design-thinking_layout.json  layout-parser-paper-fast_layout.json  layout-parser-paper_layout.json  loremipsum-flat_layout.json  non-embedded_layout.json  patent-1p_layout.json  patent_layout.json  pdf2image-memory-error-test-400p_layout.json  recalibrating-risk-report_layout.json  simplified_chinese_layout.json
layout_results_arm64/images/: RGBA_image.png.json  complex-row-column-red-or-white-wine.jpg.json  complex-structure-large-table.jpg.json  easy_table.jpg.json  example_table.jpg.json  full-page-table-crop.jpg.json  full-page-table.png.json  gs-1.jpg.json  gs-2.jpg.json  gs-3-tab1.jpg.json  gs-3.jpg.json  ilpa-example-1.jpg.json  layout-parser-paper-fast.jpg.json  layout-parser-paper-with-table.jpg.json  (+14 more)
layout_results_x86_64/: 2023-Jan-economic-outlook_layout.json  IRS-form-1987_layout.json  Silent-Giant_layout.json  design-thinking_layout.json  layout-parser-paper_layout.json  loremipsum-flat_layout.json  loremipsum_layout.json  loremipsum_multipage_layout.json  non-embedded_layout.json  recalibrating-risk-report_layout.json
requirements/: base-3.10.in  base.in  base.txt  constraints.in  dev.in  dev.txt  sg.in  sg.txt  test.in  test.txt
sample-docs/: easy_table-actual.html  easy_table-pred.html  ilpa-example-actual.html  table-multi-row-column-cells-actual.html  table-multi-row-column-cells-pred.html  table-with-footnote-actual.html  tables_as_json.py
scripts/: dl-models.sh  docker-build.sh  test-unstructured-ingest-helper.sh  version-sync.sh
test_unstructured_inference/: conftest.py  test_api.py  test_config.py  test_elements.py  test_logger.py  test_math.py  test_utils.py  test_visualization.py
unstructured_inference/: __init__.py  __version__.py  api.py  config.py  constants.py  layout_model.py  logger.py  math.py  utils.py  visualize.py  yolox_functions.py
(+78 files in other folders)
